# python-beginner-projects

./: README.md
.github/workflows/: Mood2SpotifyRec_test.yml  NatLang2Latex_test.yml
projects/Mood2SpotifyRec/: .env.example  .gitignore  README.md  SeedData.py  llm.py  main.py  pyproject.toml  spotify.py  test.py
projects/Mood2SpotifyRec/.devcontainer/: devcontainer.json
projects/Mood2SpotifyRec/.streamlit/: config.toml
projects/NatLang2Latex/: .env.example  README.md  backend.py  main.py  pyproject.toml
projects/NatLang2Latex/.devcontainer/: devcontainer.json
projects/NatLang2Latex/.github/workflow/: run_test.yaml
projects/NatLang2Latex/tests/: init_test.py
